syntax = "proto3";

package resume_service;
option go_package = "genproto/resume_service";

import "resume_model.proto";

service ResumeService {
  rpc CreateResume(Resume) returns (ResumeWithID);
  rpc UpdateResume(Resume) returns (Resume);
  rpc DeleteResume(ResumeWithID) returns (Status);
  rpc DeleteUserResume(UserWithID) returns (Status);
  rpc GetResumeByID(ResumeWithID) returns (Resume);
  rpc GetUserResume(UserWithID) returns (ListResumeResponse);
  rpc ListResume(ListRequest) returns (ListResumeResponse);
}
